<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
    android:background="@color/colorAccentLight"
        tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/tvCreeazaCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/creeaza_cont"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        />


    <TextView
    android:id="@+id/tvFirstNameRegister"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textColor="@android:color/black"
    android:layout_marginTop="20dp"
    android:text="@string/FirstNameTextView" />

    <EditText
        android:id="@+id/etFirstNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/NameEditText"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvLastNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/LastNameTextView" />

    <EditText
        android:id="@+id/etLastNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/LastNameEditText"
        android:inputType="textPersonName" />

    <TextView
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/tvUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/UsernameTextView"
       />

    <EditText
        android:id="@+id/etUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/UsernameEdit"
        android:inputType="textPersonName" />

    <TextView
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/tvEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/EmailTextView" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/EmailEditText"
        android:inputType="textEmailAddress" />


    <TextView
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/tvPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/PasswordTextView" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:hint="@string/PasswordEditText"
        android:inputType="textPassword" />



    <TextView
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/tvTelefonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TelefonTextView" />

    <EditText
        android:id="@+id/etTelefonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:hint="@string/TelefonEditText"
        android:inputType="phone"
        android:paddingBottom="10dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGender"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="315dp"
            android:layout_height="66dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rbMale"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbMale" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbFemale"
            style="@style/RadioButtonStyle"
            />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegisterButton"
        android:textAlignment="center"
        android:background="@drawable/buttom_rounded"
        android:layout_marginTop="15dp"
        />


</LinearLayout>

    </ScrollView>

</LinearLayout>






