<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activ_adauga_sesizare"
    android:background="@color/GrayLight"
    tools:context=".AdaugaSesizareActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sesizari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adauga_sesizare"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/colorAccentDark2"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

    <TextView
        android:id="@+id/tvspinnercategorieParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecteaza_categorie"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnercategorieParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

    <TextView
        android:id="@+id/tvspinnercategorieChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecteaza_subcategorie"
        android:textSize="20sp"
/>


    <Spinner
        android:id="@+id/spinnercategorieChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

    <EditText
        android:id="@+id/et_sesizari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:lines="5"
        android:gravity="top"
        android:hint="@string/adauga_descriere"
        android:inputType="text"
        />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parere_rating"
                android:textAppearance="?android:textAppearanceLarge" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/adauga"
                            android:id="@+id/btnAdaugaRating"
                            android:textColor="@color/colorAccentDark2"
                            android:background="@color/colorAccentLight"
                            android:textStyle="bold"
                            />

            <TextView
                android:id="@+id/rateCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <EditText
                android:id="@+id/RatingBarDetalii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detalii_rating"
                android:textAppearance="?android:textAppearanceMedium" />



            <TextView
                android:id="@+id/ArataPareri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginTop="10dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <Button
                android:id="@+id/btnSesizare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccentLight"
                android:text="@string/trimite_sesizare"
                android:textColor="@color/colorAccentDark2"
                android:textSize="19sp"
                android:textStyle="bold" />

             />








</LinearLayout>
    </ScrollView>


</LinearLayout>