<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout


    android:id="@+id/logIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccentLight"
    tools:context=".ProfilActivity"
    android:paddingBottom="120dp">


    <ImageView
        android:layout_width="83dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/stema"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:src="@drawable/stema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/LogIn"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextLogIn" />

    <TextView
        android:id="@+id/tvTextLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="104dp"
        android:gravity="center"
        android:text="@string/LogInText"

        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""

        android:ems="10"

        android:hint="@string/introduceti_username"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""

        android:ems="10"

        android:hint="@string/introduceti_parola"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/loginOk"
        android:layout_width="252dp"
        android:layout_height="55dp"

        android:layout_marginTop="60dp"
        android:background="@drawable/buttom_rounded"
        android:text="@string/LogIn"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword">

    </Button>

    <Button
        android:id="@+id/btnCreareCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="56dp"
        android:background="@drawable/buttom_rounded"
        android:text="@string/btnCreareCont"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginOk" />

    <TextView
        android:id="@+id/tvNu_aveti_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nu_aveti_cont"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCreareCont"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginOk"
        app:layout_constraintVertical_bias="0.878" />

    />





</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>