<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activ_sesizari"
    android:background="@color/GrayLight"
    tools:context=".SesizariActivity">

    <TextView
        android:id="@+id/tvSesizari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sesizari"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:background="@color/colorAccentDark2">
    </TextView>

    <Button
        android:id="@+id/btnsesizari_trimise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSesizari"
        android:onClick="arataListaSesizari"
        android:text="@string/sesizari_trimise" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewSesizari"
        />

    <Button
        android:id="@+id/adauga_sesizare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="93dp"
        android:text="@string/adauga_sesizare"
        android:textStyle="bold" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/colorAccentDark2"
        app:itemTextColor="@color/colorAccentLight"
        app:menu="@menu/buttom"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>